Modify configuration of picom.conf

--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -1,6 +1,6 @@
 # Configure General Settings:
 
-backend = "glx"
+backend = "xrender"
 # Options: "glx", "xrender", "xr_glx_hybrid"
 
 # Enable vsync to minimize tearing
@@ -16,7 +16,7 @@ unredir-if-possible = true;
 # Options: true or false
 
 # Use EWMH (Extended Window Manager Hints) to determine active window:
-use-ewmh-active-win = false;
+use-ewmh-active-win = true;
 # Options: true or false
 
 # Enable detection of transient windows (e.g., pop-up dialogs):
@@ -76,15 +76,15 @@ inactive-dim = 0.0;
 # focus-exclude = [];
 
 # Enable background blurring
-blur-background = true;
+# blur-background = true;
 # Options: true or false
 
 # Set blur method
-blur-method = "dual_kawase";
+# blur-method = "dual_kawase";
 # Options: "dual_kawase", "gaussian", etc.
 
 # Adjust blur strength
-blur-strength = 5.0;
+# blur-strength = 5.0;
 # Options: 0.0 - 100.0
 
 # Specify exclusions for background blur (e.g., exclude docks)
